# cmake_tutorial

./: .gitignore  .gitmodules  readme.md
1Basics/: CMakeLists.txt  main.cpp
2LibsAndSubdirectories/: CMakeLists.txt  main.cpp
3Submodules/: CMakeLists.txt  main.cpp
4VersionControl/: CMakeLists.txt  README.md  config.h.in  main.cpp
4VersionControl/Adder/: CMakeLists.txt
4VersionControl/scripts/: build.sh
5Optional/: CMakeLists.txt
5Optional/scripts/: configure.sh
6Install/: CMakeLists.txt  config.h.in  main.cpp
6Install/Adder/: Adder.cpp
6Install/scripts/: install.sh  run.sh
6Install/temp/include/: config.h
7FindLibrary/: CMakeLists.txt
7FindLibrary/Adder/: CMakeLists.txt
8FindPackage/: CMakeLists.txt
8FindPackage/Adder/: Adder.h
8FindPackage/scripts/: configure.sh
9Ctest/: CMakeLists.txt  README.md
9Ctest/tests/: CMakeLists.txt
9Ctest/tests/adder/: CMakeLists.txt  adder_test.cpp
